benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add.rs
Time: 2025-09-15 19:08:25

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0283]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_impl.rs:41:108
   |
41 |             (if i1 >= 0 { i1 as int } else { 0 }) + (if i2 >= 0 { i2 as int } else { 0 }) + if carry > 0 { 1 } else { 0 }
   |                                                                                                            ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
   |
   = note: cannot satisfy `_: verus_builtin::Integer`
   = note: required for `verus_builtin::int` to implement `verus_builtin::SpecAdd<_>`
help: consider specifying the generic argument
   |
41 |             (if i1 >= 0 { i1 as int } else { 0 }) + (if i2 >= 0 { i2 as int } else { 0 }) + if carry > 0 { 1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> } else { 0 }
   |                                                                                                             +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.

--------------------------------------------------------------------------------

Additional Output:
error[E0283]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_impl.rs:41:108
   |
41 |             (if i1 >= 0 { i1 as int } else { 0 }) + (if i2 >= 0 { i2 as int } else { 0 }) + if carry > 0 { 1 } else { 0 }
   |                                                                                                            ^ cannot infer type of the type parameter `hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat` declared on the function `spec_literal_integer`
   |
   = note: cannot satisfy `_: verus_builtin::Integer`
   = note: required for `verus_builtin::int` to implement `verus_builtin::SpecAdd<_>`
help: consider specifying the generic argument
   |
41 |             (if i1 >= 0 { i1 as int } else { 0 }) + (if i2 >= 0 { i2 as int } else { 0 }) + if carry > 0 { 1::<hint_please_add_suffix_on_literal_like_100u32_or_100int_or_100nat> } else { 0 }
   |                                                                                                             +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
